--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,21 +5,25 @@ pipeline {
         stage('Hello') {
             steps {
                 echo 'Hello'
+                sleep 5
             }
         }
         stage('Build') {
             steps {
                 echo 'Build'
+                sleep 5
             }
         }
         stage('Test') {
             steps {
                 echo 'Test'
+                sleep 3
             }
         }
        stage('deploy') {
             steps {
                 echo 'deploy'
+                sleep 2
             }
         } 
     }
